src/test/deca/syntax/invalid/return-invalidExpr.synt
return-invalidExpr.deca:3: